[2017-08-12 00:59:24 -0400]  add thread to kill grub-mount if taking too long                        Skinner, Alex  {e791454a}
[2017-08-11 20:43:59 +0200]  ZFS selection fix bug. Needs testing. #782                                 karasu      {7529c5e6}
[2017-08-06 20:09:29 +0200]  nah, use pamac in plasma, too. (but use kalu in Openbox!)                  karasu      {a53f1294}
[2017-08-06 20:08:28 +0200]  nah, use pamac in plasma, too (but kalu in openbox!)                       karasu      {8b86b94a}
[2017-08-06 19:59:06 +0200]  Use kalu in openbox. Use octopi in plasma. Remove orca and antergos..      karasu      {4c9f8c04}
[2017-08-06 19:57:47 +0200]  Use octopi in plasma. Use kalu in openbox                                  karasu      {86a428c0}
[2017-08-04 21:32:07 +0200]  vim-minimal does not exist                                                 karasu      {45b9eb6d}
[2017-08-04 21:31:20 +0200]  vim-minimal does not exist                                                 karasu      {4af1a540}
[2017-08-04 20:58:58 +0200]  location screen text was too small                                         karasu      {1bf40067}
[2017-08-04 20:41:34 +0200]  Only Gnome and Mate (for now) available to a11y                            karasu      {bd8f2e87}
[2017-08-04 19:38:06 +0200]  If we're running from sonar iso force a11y parameter to true               karasu      {6db9688f}
[2017-08-04 13:16:56 +0200]  Do not use < > for a11y                                                    karasu      {e080d9dc}
[2017-08-04 13:15:19 +0200]  Install sonar gsettings if present in the ISO (and -a option is used)      karasu      {169f0cbf}
[2017-08-04 13:00:34 +0200]  Show labels if -a is used (a11y)                                           karasu      {6feac9dd}
[2017-07-25 23:55:16 +0200]  Add gtk-engine-murrine to xfce                                             karasu      {47b6b078}