@@ -580,8 +580,12 @@
                <pkgname>gedit</pkgname>
                <pkgname>gnome-calculator</pkgname>
                <pkgname>gnome-disk-utility</pkgname>
+               <pkgname>gnome-font-viewer</pkgname>
                <pkgname>gnome-software</pkgname>
+               <pkgname>gtk-theme-paper</pkgname>
+               <pkgname>gtk-theme-adapta</pkgname>
                <pkgname nm='true' name='NetworkManager'>network-manager-applet</pkgname>
+               <pkgname>network-manager-openvpn</pkgname>
                <pkgname>noto-fonts</pkgname>
                <pkgname>noto-fonts-cjk</pkgname>
                <pkgname>noto-fonts-emoji</pkgname>
